--- a/Health_Project/fe_health/src/style.css
+++ b/Health_Project/fe_health/src/style.css
@@ -17,10 +17,15 @@ h3 {
   text-align: center;
 }
 button {
-  position: fixed;
-  top: 20px;
-  left: 20px;
   z-index: 8;
+  width: 8%;
+  height: 1.5%;
+  right: 1%;
+  background-size: cover;
+}
+#silentMoveTo {
+  position: fixed;
+  top: 5%;
 }
 
 #myVideo {
