--- a/Health_Project/fe_health/src/style.css
+++ b/Health_Project/fe_health/src/style.css
@@ -23,9 +23,13 @@ button {
   right: 1%;
   background-size: cover;
 }
-#silentMoveTo {
+#silentMoveTo1 {
   position: fixed;
   top: 5%;
+}
+#silentMoveTo2 {
+  position: fixed;
+  top: 7%;
 }
 
 #myVideo {
@@ -42,47 +46,4 @@ button {
   /*background-size: contain;*/
   object-fit: cover; /*cover video background */
   opacity: 0.2;
-}
-
-#menu li {
-  display: inline-block;
-  margin: 10px;
-  color: #000;
-  background: #fff;
-  background: rgba(255, 255, 255, 0.5);
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-}
-#menu li.active {
-  background: #666;
-  background: rgba(0, 0, 0, 0.5);
-  color: #fff;
-}
-#menu li a {
-  text-decoration: none;
-  color: #000;
-}
-#menu li.active a:hover {
-  color: #000;
-}
-#menu li:hover {
-  background: rgba(255, 255, 255, 0.8);
-}
-#menu li a,
-#menu li.active a {
-  padding: 9px 18px;
-  display: block;
-}
-#menu li.active a {
-  color: #fff;
-}
-#menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 40px;
-  z-index: 70;
-  width: 100%;
-  padding: 0;
-  margin: 0;
 }
