--- a/Health_Project/fe_health/src/css/section6.css
+++ b/Health_Project/fe_health/src/css/section6.css
@@ -18,10 +18,10 @@
   height: 200px;
   backface-visibility: hidden;
   position: absolute;
-  transition:  1s;
+  transition: 1s;
   display: flex;
-  justify-content: center; 
-  align-items: center;    
+  justify-content: center;
+  align-items: center;
   background-color: purple;
   color: #fff;
   border: 2px solid #333;
@@ -100,7 +100,7 @@
   position: absolute;
 }
 
-.container .swiper-container .swiper-phone .swiper-slide {
+.container .swiper-phone .swiper-slide {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -116,7 +116,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  transition:  0.4s;
+  transition: 0.4s;
 }
 
 .container .swiper-prev {
@@ -136,7 +136,6 @@
   background-color: #333;
   color: #fff;
 }
-
 
 /* 반응형 디자인 (미디어 쿼리) 
 @media(max-width: 800px) {
