--- a/Health_Project/fe_health/src/style.css
+++ b/Health_Project/fe_health/src/style.css
@@ -5,8 +5,47 @@ body {
 h3 {
   font-size: 5em;
   text-align: center;
+  margin-top: -100px;
   color: #fff;
   font-weight: 700;
+}
+
+.message {
+  margin-top: 50px;
+  font-size: 40px;
+  text-align: center;
+  color: #fff;
+  font-weight: 500;
+}
+
+.btn {
+  width: 100px;
+  height: 50px;
+  position: absolute;
+  margin-top: 30px;
+  left: 900px;
+  background-color: #333;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  text-align: center;
+  color: #fff;
+  border-radius: 10%;
+}
+
+.btn:hover {
+  transition: 0.4s;
+  background-color: #fff;
+  color: #333;
+  cursor: pointer;
+}
+h5 {
+  font-size: 3em;
+  text-align: center;
+  color: #fff;
+  font-weight: 500;
 }
 
 #section {
@@ -66,7 +105,7 @@ button {
   background-color: orange;
   border: 4px solid black;
   position: fixed;
-  top:0px;
+  top: 0px;
   right: 0px;
   display: flex;
   justify-content: center;
@@ -115,10 +154,3 @@ button {
   padding: 0;
   margin: 0;
 }
-
-
-
-
-
-
-
