--- a/Health_Project/fe_health/src/style.css
+++ b/Health_Project/fe_health/src/style.css
@@ -5,9 +5,16 @@ body {
 h3 {
   font-size: 5em;
   text-align: center;
-  margin-top: -100px;
   color: #fff;
   font-weight: 700;
+}
+
+h2 {
+  text-align: center;
+  font-size: 7em;
+  font-weight: 700;
+  color: #fff;
+  margin-top: 600px;
 }
 
 .message {
@@ -22,8 +29,8 @@ h3 {
   width: 100px;
   height: 50px;
   position: absolute;
-  margin-top: 30px;
-  left: 900px;
+  margin-top: 40px;
+  left: 830px;
   background-color: #333;
   color: #fff;
   display: flex;
