--- a/Health_Project/be_health/src/main/resources/templates/index.html
+++ b/Health_Project/be_health/src/main/resources/templates/index.html
@@ -5,8 +5,14 @@
 <h1>캡스톤 테스트입니다.</h1>
 <div class="col-md-12">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-3">
             <a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
+        </div>
+        <div class="col-md-3">
+            <a href="/auth/user/save" role="button" class="btn btn-primary">회원가입</a>
+        </div>
+        <div class="col-md-3">
+            <a href="/auth/user/login" role="button" class="btn btn-primary">로그인</a>
         </div>
     </div>
     <br>
